# gemini-trading

./: .env.example  .env.local  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .task12-final-ci-trigger  .task9-ci-trigger  .task9-metadata-ci-trigger  CONTRIBUTING.md  README.md  SECURITY.md  fetch_market.py  pyproject.toml  rl_optimizer.py  strategy_selector.py  test_ledger.py  xgboost_engine.py
.github/: CODEOWNERS  pull_request_template.md  task10-ci-trigger.txt  task10-evidence-ci-trigger.txt  task11-evidence-ci-trigger.txt  task11-red-ci-trigger.txt  task12-red-ci-trigger.txt
.github/workflows/: ci.yml  debug-format-output.yml  debug-full-pyright.yml  debug-lint-output.yml  debug-ruff-output.yml  debug-task-output.yml  debug-task10-format.yml  debug-task10-production-format.yml  debug-task10-ruff.yml  debug-task11-ruff.yml  debug-task7-format.yml  debug-task7-pytest.yml  debug-task7-ruff.yml  debug-task9-format.yml  debug-task9-pyright.yml  debug-task9-ruff.yml  post-merge-market-data-core.yml  repair-market-data-progress-eof.yml  task10-evidence.yml  task10-format.yml  task10-green-diagnostic.yml  task10-red-pyright.yml  task11-checkpoint.yml  task11-dev-snapshot.yml  task11-diagnostics.yml  task11-evidence.yml  task11-precommit-diagnostic.yml  task11-red-format.yml  task11-red-pytest.yml  task12-acceptance-evidence.yml  task12-append-evidence.yml  task12-final-evidence.yml  task12-format.yml  task12-lint-diagnostics.yml  task12-red-format.yml  task12-red-pytest.yml  task12-source-snapshot.yml  task3-format-preview.yml  task3-green-preview.yml  task3-lint-preview.yml  (+82 more)
docs/operations/: binance-market-data.md  candidate-multi-model-strategy-step-verification.md  candidate-multi-model-strategy.md  deterministic-backtesting-step-verification.md  deterministic-backtesting.md  git-history-sanitization-runbook.md  market-data-core-step-verification.md
legacy/prototype_v0/: README.md  fetch_market.py  rl_optimizer.py  strategy_selector.py  xgboost_engine.py
reports/security/: foundation-verification.md
reports/temporary/: task-three-ruff.txt  task4-green-ruff.txt  task4-pyright.txt  task4-ruff.txt  task5-green-pyright.txt  task5-green-ruff.txt  task5-interfaces.txt  task5-red-pyright.txt  task6-discovery.txt  task6-pyright.txt  task6-pytest.txt  task7-lint.txt  task7-pyright.txt  task9-lint.txt  (+1 more)
tests/: candidate_strategy_e2e_worker.py  conftest.py  research_fixture_support.py  strategy_fixture_support.py  strategy_study_artifact_support.py  study_fixture_support.py
(+233 files in other folders)
